Clean up test env values, add new ones

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,8 @@
-# This stuff is required _within_ the containers, e.g. NO host machine paths:
-QGIS_PROJECT_FILE: /data/stopcorr.qgs
-# These ports are reachable on your _host_ machine under localhost:
-PG_HOST_PORT=5432
+POSTGRES_HOST_PORT=5432
+POSTGRES_DB=stopcorr
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+QGIS_PROJECT_FILE=/data/stopcorr.qgs
 QGIS_HOST_PORT=8081
 FILESERVER_HOST_PORT=8080
 # Analysis parameters:
