--- a/docker-compose.test.server.yml
+++ b/docker-compose.test.server.yml
@@ -10,14 +10,26 @@ services:
       - 127.0.0.1:${POSTGRES_HOST_PORT}:5432
     volumes:
       - ./db/sql:/docker-entrypoint-initdb.d:ro
+      - ./testdata/import:/import:ro
       - type: tmpfs
         target: /var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-q", "-U", "${POSTGRES_USER}"]
-      interval: 30s
+      interval: 5s
       start_period: 5s
       timeout: 20s
       retries: 3
+  qgis:
+    image: camptocamp/qgis-server:3.16
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: unless-stopped
+    env_file: .env
+    ports:
+      - 127.0.0.1:${QGIS_HOST_PORT}:80
+    volumes:
+      - ./qgis:/qgis:ro
 
 networks:
   default:
