Add medians calculation

--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,5 @@ FILESERVER_HOST_PORT=8080
 # Analysis parameters:
 ANALYSIS_NAME=test_analysis
 STOP_NEAR_LIMIT_M=25.0
+MIN_OBSERVATIONS_PER_STOP=10
+MAX_NULL_STOP_DIST_M=100.0
