--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,4 @@ ANALYSIS_NAME=test_analysis
 STOP_NEAR_LIMIT_M=25.0
 MIN_OBSERVATIONS_PER_STOP=10
 MAX_NULL_STOP_DIST_M=100.0
+RADIUS_PERCENTILES=0.5,0.75,0.9,0.95
