--- a/.env.test
+++ b/.env.test
@@ -11,3 +11,11 @@ STOP_NEAR_LIMIT_M=25.0
 MIN_OBSERVATIONS_PER_STOP=10
 MAX_NULL_STOP_DIST_M=100.0
 RADIUS_PERCENTILES=0.5,0.75,0.9,0.95
+MIN_RADIUS_PERCENTILES_TO_SUM=0.5,0.95
+DEFAULT_MIN_RADIUS_M=20.0
+MANUAL_ACCEPTANCE_MIN_RADIUS_M=40.0
+LARGE_SCATTER_PERCENTILE=0.9
+LARGE_SCATTER_RADIUS_M=10.0
+LARGE_JORE_DIST_M=25.0
+STOP_GUESSED_PERCENTAGE=0.05
+TERMINAL_IDS=1000001,1000015,2000002,2000003,2000212,4000011
