Include atlas images from QGIS

--- a/docker-compose.test.analysis.yml
+++ b/docker-compose.test.analysis.yml
@@ -9,6 +9,7 @@ services:
     env_file: .env
     volumes:
       - ./python/src:/code:ro
+      - ./qgis/out:/qgis/out:ro
       - ./results:/results
     command: bash import_all.sh
 
