--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -21,30 +21,42 @@ services:
       start_period: 5s
       timeout: 20s
       retries: 3
-  worker:
-    image: stopcorr/stopcorr-python:latest
+  api:
+    image: stopcorr/api:latest
     build: ./python
     depends_on:
       db:
         condition: service_healthy
-    restart: "no"
     env_file: .env
     volumes:
       - ./python/src:/code:ro
-      - ./qgis/out:/qgis/out:ro
-      - ./results:/results
-    command: python -c "print('worker OK')"
-  fileserver:
-    image: stopcorr/stopcorr-python:latest
-    restart: unless-stopped
-    env_file: .env
     ports:
-      - ${FILESERVER_HOST_PORT}:8080
-    volumes:
-      - ./results:/results:ro
-    command: python -m http.server 8080 --directory /results
+      - "8001:8000"
+    restart: on-failure
+  #worker:
+  #  image: stopcorr/stopcorr-python:latest
+  #  build: ./python
+  #  depends_on:
+  #    db:
+  #      condition: service_healthy
+  #  restart: "no"
+  #  env_file: .env
+  #  volumes:
+  #    - ./python/src:/code:ro
+  #    - ./qgis/out:/qgis/out:ro
+  #    - ./results:/results
+  #  command: python -c "print('worker OK')"
+  #fileserver:
+  #  image: stopcorr/stopcorr-python:latest
+  #  restart: unless-stopped
+  #  env_file: .env
+  #  ports:
+  #    - ${FILESERVER_HOST_PORT}:8080
+  #  volumes:
+  #    - ./results:/results:ro
+  #  command: python -m http.server 8080 --directory /results
 
 networks:
   default:
-    external: true
+    external: false
     name: stopcorr_nw
