--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -7,5 +7,4 @@ urllib3==1.26.6
 python-pptx==0.6.19
 fastapi==0.75.2
 uvicorn==0.15.0
-psycopg-binary==3.0.11
-psycopg==3.0.11
+azure-functions==1.10.1
