--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,8 @@ qgis/out/
 results/
 docker-compose.yml
 .idea/
-python/venv/
+python/api/venv
+python/api/local.settings.json
+python/importer/venv
+python/importer/local.settings.json
 testdata/import/hfp.csv
