Use "hfp" as db name instead of "stopcorr"
"Stop correspondence" is just one of our business/analysis cases,
whereas the hfp-analytics db transforms and analyses
hfp data in general.

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 POSTGRES_HOST_PORT=5432
-POSTGRES_DB=stopcorr
+POSTGRES_DB=hfp
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 FILESERVER_HOST_PORT=8080
