--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 POSTGRES_HOST_PORT=5432
-POSTGRES_DB=hfp
+POSTGRES_DB=analytics
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 FILESERVER_HOST_PORT=8080
