--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,7 @@
+HFP_STORAGE_CONTAINER_NAME=secret
+HFP_STORAGE_CONNECTION_STRING=secret
+AzureWebJobsStorage=secret
+POSTGRES_HOST=db
 POSTGRES_HOST_PORT=5432
 POSTGRES_DB=analytics
 POSTGRES_USER=postgres
