Timezone setting, fixed importer from getting crashed if loading of one blob fails

--- a/Dockerfile.api_deploy
+++ b/Dockerfile.api_deploy
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/azure-functions/python:4-python3.10
 ENV TZ="Europe/Helsinki"
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot
 ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
+ENV FUNCTIONS_SECRETS_PATH=/etc/secrets
 ENV AzureWebJobsSecretStorageType=Files
 ENV PYTHONUNBUFFERED=1
 
