--- a/Dockerfile.importer_deploy
+++ b/Dockerfile.importer_deploy
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/azure-functions/python:4-python3.10
 
+ENV TZ="Europe/Helsinki"
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot
 ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 ENV AzureWebJobsSecretStorageType=Files
