--- a/python/Dockerfile.importer_local
+++ b/python/Dockerfile.importer_local
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/azure-functions/python:4-python3.10
 
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot
 ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
+ENV TZ="Europe/Helsinki"
 
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
