--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -32,15 +32,17 @@ services:
       db:
         condition: service_healthy
     ports:
-      - "127.0.0.1:7071:80"
+      - "127.0.0.1:7071:8000"
     env_file: .env
+    working_dir: /code
+    command: uvicorn api.main:app --host 0.0.0.0 --reload
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
-      - ./python/api:/home/site/wwwroot/api/:ro
-      - ./python/common:/home/site/wwwroot/common/:ro
-      - ./python/host.json:/home/site/wwwroot/host.json:ro
-      - ./python/requirements.txt:/home/site/wwwroot/requirements.txt:ro
+      - ./python/api:/code/api:ro
+      - ./python/common:/code/common/:ro
+      - ./python/host.json:/code/host.json:ro
+      - ./python/requirements.txt:/code/requirements.txt:ro
     restart: on-failure
   importer:
     image: hfp-analytics/importer:latest
@@ -56,8 +58,8 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
-      - ./python/importer:/home/site/wwwroot/importer/:ro
-      - ./python/common:/home/site/wwwroot/common/:ro
+      - ./python/importer:/home/site/wwwroot/importer:ro
+      - ./python/common:/home/site/wwwroot/common:ro
       - ./python/host.json:/home/site/wwwroot/host.json:ro
       - ./python/requirements.txt:/home/site/wwwroot/requirements.txt:ro
     restart: on-failure
