--- a/python/Dockerfile.api_local
+++ b/python/Dockerfile.api_local
@@ -2,12 +2,12 @@ FROM mcr.microsoft.com/azure-functions/python:4-python3.10
 
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot
 ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
-ENV FUNCTIONS_SECRETS_PATH=/etc/secrets
 ENV TZ="Europe/Helsinki"
 
+ENV FUNCTIONS_SECRETS_PATH=/etc/secrets
 ENV AzureWebJobsSecretStorageType=Files
 RUN mkdir -p /etc/secrets/
-ADD host_secrets.json /etc/secrets/host.json
+ADD local_host_secrets.json /etc/secrets/host.json
 
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
