--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ python/local.settings.json
 testdata/import/hfp.csv
 .vscode/
 analytics-data
+
+scripts/deploy/.env
+scripts/deploy/dev_deploy.sql
