Postgres db conn params as conn string

--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,7 @@
 HFP_STORAGE_CONTAINER_NAME=secret
 HFP_STORAGE_CONNECTION_STRING=secret
 IS_DEBUG=True
-POSTGRES_HOST=db
-POSTGRES_HOST_PORT=5432
-POSTGRES_DB=analytics
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_CONNECTION_STRING=postgresql://postgres:postgres@db:5432/analytics
 FILESERVER_HOST_PORT=8080
 ANALYSIS_NAME=test_analysis
 STOP_NEAR_LIMIT_M=25.0
