--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,7 @@
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
-# trigger the pipeline when creating a tag with -rc* suffix
-trigger:
-  tags:
-    include:
-      - '*.*.*-rc*'
+trigger: none
 
 resources:
 - repo: self
