--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ testdata/import/hfp.csv
 .vscode/
 analytics-data
 
-scripts/dev_devploy/.env
-scripts/dev_devploy/dev_deploy.sql
-scripts/test_devploy/.env
-scripts/test_devploy/test_deploy.sql
+scripts/dev_deploy/.env
+scripts/dev_deploy/dev_deploy.sql
+scripts/test_deploy/.env
+scripts/test_deploy/test_deploy.sql
