Start using terraform (#38)
* Postgres db conn params as conn string

* Deploy scripts for test environment

* Getting image tag from pipeline variable

* timescaledb image fix, Migra deploy instructions

* Trigger dev & test python scripts, fixed psycopg2 conn typo

* Fix db unlock

* Fixed importer locking & postgresDbHandler connection init

* Init remote db script

* Remove deploy scripts

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,7 @@ testdata/import/hfp.csv
 .vscode/
 analytics-data
 
-scripts/deploy/.env
-scripts/deploy/dev_deploy.sql
+scripts/dev_deploy/.env
+scripts/dev_deploy/dev_deploy.sql
+scripts/test_deploy/.env
+scripts/test_deploy/test_deploy.sql
