Separate import and analysis logic to run importer every hour
This commit splits the codebase to two functions inside importer.
Lots of refactoring needs to be done after this to make code cleaner.

--- a/Dockerfile.importer_deploy
+++ b/Dockerfile.importer_deploy
@@ -9,6 +9,7 @@ COPY ./python/requirements.txt /
 RUN pip install -r /requirements.txt
 
 COPY ./python/importer /home/site/wwwroot/importer/
+COPY ./python/analyzer /home/site/wwwroot/analyzer/
 COPY ./python/common /home/site/wwwroot/common/
 COPY ./python/host.json home/site/wwwroot/host.json
 COPY ./python/requirements.txt home/site/wwwroot/requirements.txt
