--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -2,6 +2,8 @@ certifi==2021.5.30
 charset-normalizer==2.0.4
 idna==3.2
 psycopg2-binary==2.9.1
+psycopg==3.1.8
+psycopg-pool==3.1.6
 requests==2.26.0
 urllib3==1.26.6
 python-pptx==0.6.19
