--- a/python/Dockerfile.api_local
+++ b/python/Dockerfile.api_local
@@ -1,5 +1,9 @@
 FROM mcr.microsoft.com/azure-functions/python:4-python3.10
 
+# Workaround for obsolete jessie references (https://github.com/Azure/azure-functions-docker/issues/874)
+# Can be removed after fixed in base image.
+RUN sed -i '/jessie/d' /etc/apt/sources.list
+
 RUN apt-get update && apt-get install -y libpq5 && rm -rf /var/lib/apt/lists/*
 
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot
