Fix branch list syntax

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,11 @@
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
-trigger: $(triggerBranches)
-pr: $(prBranches)
+trigger:
+- $(triggerBranch)
+
+pr:
+- $(prBranch)
 
 resources:
 - repo: self
