Set trigger and pr to none
Pipeline syntax does not support variables for pr or trigger...

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,8 @@
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
-trigger:
-- $(triggerBranch)
-
-pr:
-- $(prBranch)
+trigger: none
+pr: none
 
 resources:
 - repo: self
