--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ stages:
         # imageTag (dev/test/prod): a pipeline variable
         tags: |
           $(imageTag)
+        arguments: '--build-arg BUILD_VERSION=$(build.buildNumber)'
     - task: Docker@2
       displayName: Build and push importer to container registry
       inputs:
@@ -47,3 +48,4 @@ stages:
         # imageTag (dev/test/prod): a pipeline variable
         tags: |
           $(imageTag)
+        arguments: '--build-arg BUILD_VERSION=$(build.buildNumber)'
