--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,17 +1,14 @@
-certifi==2022.12.7
-charset-normalizer==2.0.4
-idna==3.2
-psycopg2-binary==2.9.1
-psycopg==3.1.8
-psycopg-pool==3.1.6
-requests==2.26.0
-urllib3==1.26.6
-python-pptx==0.6.19
-fastapi==0.92.0
-azure-functions==1.10.1
-azure-storage-blob==12.14.1
-zstandard==0.17.0
-uvicorn==0.18.2
-pydantic==1.10.6
-pytz==2022.7.1
-pyarrow==12.0.0
+certifi==2023.7.22
+psycopg2-binary==2.9.6
+psycopg[binary]==3.1.8
+psycopg-pool==3.1.7
+requests==2.31.0
+python-pptx==0.6.21
+fastapi==0.100.0
+azure-functions==1.15.0
+azure-storage-blob==12.17.0
+zstandard==0.21.0
+uvicorn==0.23.1
+pydantic==2.1.1
+pytz==2023.3
+pyarrow==12.0.1
