--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -13,3 +13,9 @@ pydantic==2.1.1
 pytz==2023.3
 pyarrow==12.0.1
 numpy==1.24.3
+pandas==2.1.0
+geopandas==0.14.0
+python-dotenv==1.0.0
+PyYAML==6.0
+scikit-learn==1.3.0
+httpx
