added FLOW_ANALYTICS_SAS_CONNECTION_STRING to .env.test

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 HFP_STORAGE_CONTAINER_NAME=secret
 HFP_STORAGE_CONNECTION_STRING=secret
+FLOW_ANALYTICS_SAS_CONNECTION_STRING=secret
 IS_DEBUG=True
 POSTGRES_CONNECTION_STRING=postgresql://postgres:postgres@db:5432/analytics
 FILESERVER_HOST_PORT=8080
