renames, fastapi codes and some clean up

--- a/Dockerfile.importer_deploy
+++ b/Dockerfile.importer_deploy
@@ -17,10 +17,10 @@ COPY ./python/importer ${WORK_DIR}/importer/
 COPY ./python/analyzer ${WORK_DIR}/analyzer/
 COPY ./python/common ${WORK_DIR}/common/
 COPY ./python/preprocess ${WORK_DIR}/preprocess/
-COPY ./python/preprocess_http ${WORK_DIR}/preprocess_http/
-COPY ./python/HttpStart ${WORK_DIR}/HttpStart/
-COPY ./python/Orchestrator ${WORK_DIR}/Orchestrator/
-COPY ./python/SetStatusActivity ${WORK_DIR}/SetStatusActivity/
-COPY ./python/GetStatusActivity ${WORK_DIR}/GetStatusActivity/
-COPY ./python/ReclusterAnalysisActivity ${WORK_DIR}/ReclusterAnalysisActivity/
+COPY ./python/httpPreprocess ${WORK_DIR}/httpPreprocess/
+COPY ./python/durable/httpStart ${WORK_DIR}/httpStart/
+COPY ./python/durable/orchestrator ${WORK_DIR}/orchestrator/
+COPY ./python/durable/setStatusActivity ${WORK_DIR}/setStatusActivity/
+COPY ./python/durable/getStatusActivity ${WORK_DIR}/getStatusActivity/
+COPY ./python/durable/reclusterAnalysisActivity ${WORK_DIR}/reclusterAnalysisActivity/
 COPY ./python/host.json ${WORK_DIR}/host.json
